--- a/src/main/resources/templates/aboutapi.html
+++ b/src/main/resources/templates/aboutapi.html
@@ -9,47 +9,19 @@
     <title>Short Description about API</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-warning">
-    <img src ="https://upload.wikimedia.org/wikipedia/en/0/07/Ala-Too_International_University_Seal.png" style="width:100px;height:100px;">
-    <a class="navbar-brand" href="#">Ala-Too Student Information</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="/"> Back To Main page <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/aboutapi">AboutAPI</a>
-            </li>
-        </ul>
-    </div>
-</nav>
-<div class="container">
-    <h2 style = "font-family:Georgia,ser;font-size:45px;font-style:oblique; text-align: center;">How has API been used </h2>
-    <br>
-</div>
-<div class="container" style="font-family: Verdana,SansSerif; font-size: 14px;font-style: normal" >
-    About the API there are 4 methods and they are as follows:</div>
-<div class="container" style="font-family: Verdana,SansSerif; font-size: 14px;font-style: normal" >
-    GET
-    <br> POST
-    <br>PUT
-    <br>DELETE
-</div>
-<div class="container" style="font-family: Verdana,SansSerif; font-size: 14px;font-style: normal" >
-    So, here I will be describing shortly how I used API (Screenshots can be found in github read.me section).
-    <br>
 
-    <br>GET- This method can be used by typing "/datalar/id" and the information of the writing ip can be appeared.
-    <br>POST- This method is used by typing"/datalar/add" and the required information will be added to the server.
-    <br>PUT- This method is used by typing"/datalar/id" the typed id's iformation can be changed.
-    <br>DELETE- This method is activated by typing"/datalar/id" and selected id will be removed from the server.
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <blockquote class="blockquote">
+            <p class="mb-0">In order to send or receive information we can make a specific “call” or “request”. It can also be used to update or delete data. There are 4 API methods which are GET, POST, PUT, DELETE. Below I have shown how I have used these API methods for my own data;
+            </p>
+        </blockquote>
     <br>
-    <br>
-    So, this was the short description about the API I used in this web application.
-    For more information please read the read.me section in github.
+    <p class="lead"><b>GET:</b> Gathers information. ("books/all" is to get all books information and "books/id" is to get a single book's data by typing an id which we want to receive.)
+    <br><b>POST:</b> Sends data to the API server by creating new data. ("books/add", by this post request we create a new data by providing all of the information to body data.)
+    <br><b>PUT:</b> Updates pieces of data. ("books/id", we can change a single data by providing an id to put request which we want to update)
+    <br><b>DELETE:</b> Deletes pieces of data ("books/id" we can delete an unwanted book that we have created before by typing the id of that book.)</p>
+</div>
 </div>
 </body>
 </html>
