--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
 <body>
 <nav class="navbar navbar-dark navbar-expand-lg shadow bg-dark">
     <img src ="https://upload.wikimedia.org/wikipedia/en/0/07/Ala-Too_International_University_Seal.png" style="width:100px;height:100px;">
-    <a class="navbar-brand" href="#">Library of Alatoo University</a>
+    <a class="navbar-brand p-2" href="#">Library of Alatoo University</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -19,39 +19,44 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item p-3"><a href="#" class="nav-link active">Home</a></li>
-            <li class="nav-item p-3"><a class="nav-link" href="#"data-toggle="modal" data-target="#addDatalar">Add Book</a>
+            <li class="nav-item p-3"><a class="nav-link" href="#"data-toggle="modal" data-target="#addBooks">Add Book</a>
             <li class="nav-item p-3"><a href="/aboutapi" class="nav-link">About-API</a></li>
         </ul>
     </div>
 </nav>
-<div class ="container my-2"></div>
-<table class ="table table-stripped table-responsive-md" cellspacing="1"  border="2" bordercolor="#000000" background="bg.gif">
+<div class="jumbotron">
+    <p class="lead">This project's aim is to request books from our university by typing the book's information which we want. We can succeed this aim by clicking on the "Add Book" which is on the navbar. </p>
+    <hr class="my-4">
+    <p>Books we have requested are then displayed in a table below.</p>
+</div>
+<div class ="container mt-n5"></div>
+<table class ="table table-striped table-dark">
     <thead>
     <tr>
-        <th>Book Name</th>
-        <th>Author</th>
-        <th>Type</th>
+        <th scope="col">Book Name</th>
+        <th scope="col">Author</th>
+        <th scope="col">Type</th>
     </tr>
     </thead>
     <tbody>
     <tr th:each = "book: ${Books}">
-        <td th:text="${book.bookName}"></td>
-        <td th:text="${book.author}"></td>
-        <td th:text="${book.type}"></td>
+        <td scope="row" th:text="${book.bookName}"></td>
+        <td scope="row" th:text="${book.author}"></td>
+        <td scope="row" th:text="${book.type}"></td>
     </tr>
     </tbody>
 </table>
-<div class="modal fade" id="addDatalar" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="addBooks" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModelLabel">Add Book Information</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button aria-label="Close" class="close" data-dismiss="modal" type="button">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <form name="datalarForm">
+                <form name="booksForm">
 
                 <div class="form-group" >
                         <label for="bookName">Book Name</label>
